shim/third-party/rust/vendor/annotate-snippets-0.9.1/tests/fixtures/no-color/simple.txt
error: expected one of `.`, `;`, `?`, or an operator, found `for`
   --> src/format_color.rs:171:9
    |
169 |         })
    |           - expected one of `.`, `;`, `?`, or an operator here
170 | 
171 |         for line in &self.body {
    |         ^^^ unexpected token
    |
